--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 					<div class="col-lg-4">
 						<div class="tm-feature">
 							<i class="fas fa-4x fa-seedling tm-feature-icon"></i>
-							<p class="tm-feature-description">Preserveramos pelo meio ambiente, utilziamos embalagens descartáveis.</p>
+							<p class="tm-feature-description">Preservamos pelo meio ambiente, utilizamos embalagens descartáveis.</p>
 						</div>
 					</div>
 					<div class="col-lg-4">
